[package]
name = "macros-common"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>",
            "Aaron Blankstein <aaron@blockstack.com>",
            "Ludo Galabru <ludovic@blockstack.com>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Reference implementation of the Stacks 2.0 Blockchain"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain", "macros" ]
readme = "README.md"
edition = "2021"
resolver = "2"

[lib]
name = "macros_common"
path = "./src/lib.rs"

[dependencies]
serde = "1"
serde_derive = "1"
lazy_static = "1.4.0"
slog = { version = "2.5.2", features = [ "max_level_trace" ] }

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[features]
testing = []