[package]
name = "marf"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>",
            "Aaron Blankstein <aaron@blockstack.com>",
            "Ludo Galabru <ludovic@blockstack.com>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Reference implementation of the Stacks 2.0 Blockchain"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain", "marf" ]
readme = "README.md"
edition = "2021"
resolver = "2"

[lib]
name = "marf"
path = "./src/lib.rs"

[dependencies]
stacks_common = { package = "stacks-common", features = ["default", "testing"], path = "../stacks-common/." }
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
rand = "0.7.3"
regex = "1"
serde = "1"
serde_derive = "1"

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[dependencies.rusqlite]
version = "=0.24.2"
features = ["blob", "serde_json", "i128_blob", "bundled", "trace"]

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(target_env = "msvc")))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), target_env = "msvc"))'.dependencies]
sha2 = { version = "0.10" }